--- a/main.html
+++ b/main.html
@@ -10,7 +10,41 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form method="post">
 
+	<label for="name">Name</label>
+	<input type="text" id="name" name="name" required><br>
+
+	<label for="email">Email</label>
+	<input type="email" id="email" name="email" required><br>
+
+	<label>gender</label>
+	<input type="radio"   value="male" name="gender" required>
+    <label>male</label>
+	<input type="radio" value="female" name="gender" required>
+   <label>female</label><br>
+	
+	<label for="laptop">laptop brands</label>
+	<select id="laptop" name="laptop" >
+		<option value="Apple">Apple</option>
+		<option value="Asus">Asus</option>
+		<option value="HP">HP</option>
+	</select><br>
+
+	<label for="age">Age</label>
+	<input type="number" id="age" name="age" required><br>
+
+	<label for="dob">Date of Birth</label>
+	<input type="date" id="dob" name="dob"required><br>
+
+	<label for="password">Password</label>
+	<input type="password" id="password" name="Password" required><br>
+
+		<label for="portfolio">portfolio Url</label>
+        <input type="url" id="portfolio" name="portfolio"><br>
+
+	<button type="button">submit</button>
+</form>
 </body>
 
 </html>
