--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<form method="post">
+<form method="POST">
 
 	<label for="name">Name</label>
 	<input type="text" id="name" name="name" required><br>
@@ -19,10 +19,10 @@
 	<input type="email" id="email" name="email" required><br>
 
 	<label>gender</label>
-	<input type="radio"   value="male" name="gender" required>
-    <label>male</label>
-	<input type="radio" value="female" name="gender" required>
-   <label>female</label><br>
+	<input type="radio"   id="male" value="male" name="gender" required>
+    <label for="male">male</label>
+	<input type="radio" id="female" value="female" name="gender" required>
+   <label for="female">female</label><br>
 	
 	<label for="laptop">laptop brands</label>
 	<select id="laptop" name="laptop" >
