--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Job Application Form</title>
 </head>
 
 <body>
@@ -12,10 +13,10 @@
 </script>
 <form method="POST">
 
-	<label for="name">Name</label>
+	<label for="name">Name*</label>
 	<input type="text" id="name" name="name" required><br>
 
-	<label for="email">Email</label>
+	<label for="email">Email*</label>
 	<input type="email" id="email" name="email" required><br>
 
 	<label>gender</label>
@@ -31,13 +32,13 @@
 		<option value="HP">HP</option>
 	</select><br>
 
-	<label for="age">Age</label>
+	<label for="age">Age*</label>
 	<input type="number" id="age" name="age" required><br>
 
-	<label for="dob">Date of Birth</label>
+	<label for="dob">Date of Birth*</label>
 	<input type="date" id="dob" name="dob"required><br>
 
-	<label for="password">Password</label>
+	<label for="password">Password*</label>
 	<input type="password" id="password" name="Password" required><br>
 
 		<label for="portfolio">portfolio Url</label>
