--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 		<label for="portfolio">portfolio Url</label>
         <input type="url" id="portfolio" name="portfolio"><br>
 
-	<button type="button">submit</button>
+	<button type="submit" >Submit</button>
 </form>
 </body>
 
